# Daily-arXiv-Notify

./: .env.example  .gitignore  LICENSE  README.md  README_ZH.md  config.example.toml  ecosystem.config.cjs  pyproject.toml
app/: __init__.py  cli.py  config.py  db.py  detail_source.py  logging.py  models.py  output_language.py  pipeline.py  progress.py
app/clients/: arxiv_client.py  email_client.py  openai_client.py
app/prompts/: __init__.py  keyword_filter_system.txt  keyword_filter_user.txt  loader.py  paper_detail_system.txt  paper_detail_user.txt  paper_summary_system.txt  paper_summary_user.txt
app/render/: __init__.py  html_renderer.py  markdown_renderer.py
app/services/: __init__.py  delivery_service.py  detail_service.py  digest_service.py  filter_service.py  ingest_service.py  summarize_service.py
docs/: roadmap.md
scripts/: build_release.ps1  build_release.py  run_daily.py
tests/: test_arxiv_client.py  test_config.py  test_db.py  test_detail_service.py  test_html_renderer.py  test_markdown_renderer.py  test_openai_client.py  test_output_language.py  test_prompt_loader.py
