[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-arxiv-notify"
version = "0.1.0"
description = "Daily arXiv digest generation with keyword filtering, AI summaries, and SMTP delivery."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "markdown>=3.7",
  "openai>=1.100.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "tqdm>=4.66.4",
  "tomli>=2.2.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
daily-arxiv-notify = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.clients", "app.prompts", "app.render", "app.services"]

[tool.setuptools.package-data]
"app.prompts" = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
